in-sync-frontend/src/pages/MainPage.css
.MainPage {
    background-color: #282c34;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    font-size: calc(10px + 2vmin);
}

.MainPage h1 {
    color: white;
}

